  * transplantFormants() accepts spectral filter produced by getSpectralEnvelope() as an alternative to donor sound
  * soundgen(): vectorized vocal tract length ("vocalTract" argument) - note that this is similar to the "mouth" argument, but with bandwidths adjusted appropriately and with no limitation on the magnitude of formant frequency shifts


          CHANGES IN SOUNDGEN VERSION 1.5.1 [12-October-2019]
BUGS FIXED:
  * pitch_app() runs locally, new layout, multiple new features, integrated with analyze()
  * analyze() and pitch_app(): improved accuracy of autocorrelation-based pitch tracking at high frequencies

NEW FUNCTIONS:
  * pitchSmoothPraat(): smoothes pitch contours with the same algorithm and "bandwidth" parameter as in Praat for improved compatibility
  * getPrior(): extract and/or plot the prior used for adjusting the certainty in pitch estimates in analyze()

MINOR:
  * soundgen_app(): improved tips
  * spectrogram(): option to plot frequencies on a logarithmic scale (yScale = 'log') and specify units (ms/s and Hz/kHz)
  * spectrogram(): by default pads sounds with silence so as to analyze the edges (padWithSilence = TRUE)
  * ssm(), spectrogram(), modulationSpectrum(), analyze(): standardized specification of "colorTheme"
  * analyze(): more flexible "cutFreq" defaults
  * analyze(): priorPlot and plotSpec deprecated
  * analyze(): support for plotting both spetrogram & oscillogram (finally!)


          CHANGES IN SOUNDGEN VERSION 1.5.0 [11-September-2019]
NEW FUNCTIONS:
  * pitch_app(): an interactive Shiny app for manually editing intonation (pitch) contours in a web browser

Affect back-compatibility:
  * analyze(): priorMean is now in Hz instead of semitones (but priorSD is still in semitones), priorPlot looks nicer
  * analyze(): interpolWin and cepSmooth are now in Hz instead of bins
  * analyze(): snakeStep, interpolWin, and smooth are set to 0 instead of NULL to turn off these types of pitch postprocessing

MINOR: